AETHER-2554 and remove old 2.1.0 material (#137)
