# pkg/toplevel/server/convert-oapi-gnmi.go
@@ -7,8 +7,6 @@ package server
 
 import (
 	"fmt"
-	externalRef1Svr "github.com/onosproject/aether-roc-api/pkg/aether_2_1_0/server"
-	externalRef1 "github.com/onosproject/aether-roc-api/pkg/aether_2_1_0/types"
 	externalRef0Svr "github.com/onosproject/aether-roc-api/pkg/aether_3_0_0/server"
 	externalRef0 "github.com/onosproject/aether-roc-api/pkg/aether_3_0_0/types"
 	externalRef2Svr "github.com/onosproject/aether-roc-api/pkg/aether_4_0_0/server"
@@ -59,116 +57,6 @@ func encodeToGnmiElements(elements *types.Elements, target string, forDelete boo
 		return nil, nil
 	}
 	updates := make([]*gnmi.Update, 0)
-
-	if elements.AccessProfile210 != nil {
-		accessProfileUpdates, err := externalRef1Svr.EncodeToGnmiAccessProfile(
-			elements.AccessProfile210, false, forDelete, externalRef1.Target(target),
-			"/access-profile")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiAccessProfile() %s", err)
-		}
-		updates = append(updates, accessProfileUpdates...)
-	}
-
-	if elements.ApnProfile210 != nil {
-		apnProfileUpdates, err := externalRef1Svr.EncodeToGnmiApnProfile(
-			elements.ApnProfile210, false, forDelete, externalRef1.Target(target),
-			"/apn-profile")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiApnProfile() %s", err)
-		}
-		updates = append(updates, apnProfileUpdates...)
-	}
-
-	if elements.ConnectivityService210 != nil {
-		connectivityServiceUpdates, err := externalRef1Svr.EncodeToGnmiConnectivityService(
-			elements.ConnectivityService210, false, forDelete, externalRef1.Target(target),
-			"/connectivity-service")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiConnectivityService() %s", err)
-		}
-		updates = append(updates, connectivityServiceUpdates...)
-	}
-
-	if elements.Enterprise210 != nil {
-		enterpriseUpdates, err := externalRef1Svr.EncodeToGnmiEnterprise(
-			elements.Enterprise210, false, forDelete, externalRef1.Target(target),
-			"/enterprise")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiEnterprise() %s", err)
-		}
-		updates = append(updates, enterpriseUpdates...)
-	}
-
-	if elements.QosProfile210 != nil {
-		qosProfileUpdates, err := externalRef1Svr.EncodeToGnmiQosProfile(
-			elements.QosProfile210, false, forDelete, externalRef1.Target(target),
-			"/qos-profile")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiQosProfile() %s", err)
-		}
-		updates = append(updates, qosProfileUpdates...)
-	}
-
-	if elements.SecurityProfile210 != nil {
-		securityProfileUpdates, err := externalRef1Svr.EncodeToGnmiSecurityProfile(
-			elements.SecurityProfile210, false, forDelete, externalRef1.Target(target),
-			"/security-profile")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiSecurityProfile() %s", err)
-		}
-		updates = append(updates, securityProfileUpdates...)
-	}
-
-	if elements.ServiceGroup210 != nil {
-		serviceGroupUpdates, err := externalRef1Svr.EncodeToGnmiServiceGroup(
-			elements.ServiceGroup210, false, forDelete, externalRef1.Target(target),
-			"/service-group")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiServiceGroup() %s", err)
-		}
-		updates = append(updates, serviceGroupUpdates...)
-	}
-
-	if elements.ServicePolicy210 != nil {
-		servicePolicyUpdates, err := externalRef1Svr.EncodeToGnmiServicePolicy(
-			elements.ServicePolicy210, false, forDelete, externalRef1.Target(target),
-			"/service-policy")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiServicePolicy() %s", err)
-		}
-		updates = append(updates, servicePolicyUpdates...)
-	}
-
-	if elements.ServiceRule210 != nil {
-		serviceRuleUpdates, err := externalRef1Svr.EncodeToGnmiServiceRule(
-			elements.ServiceRule210, false, forDelete, externalRef1.Target(target),
-			"/service-rule")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiServiceRule() %s", err)
-		}
-		updates = append(updates, serviceRuleUpdates...)
-	}
-
-	if elements.Subscriber210 != nil {
-		subscriberUpdates, err := externalRef1Svr.EncodeToGnmiSubscriber(
-			elements.Subscriber210, false, forDelete, externalRef1.Target(target),
-			"/subscriber")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiSubscriber() %s", err)
-		}
-		updates = append(updates, subscriberUpdates...)
-	}
-
-	if elements.UpProfile210 != nil {
-		upProfileUpdates, err := externalRef1Svr.EncodeToGnmiUpProfile(
-			elements.UpProfile210, false, forDelete, externalRef1.Target(target),
-			"/up-profile")
-		if err != nil {
-			return nil, fmt.Errorf("EncodeToGnmiUpProfile() %s", err)
-		}
-		updates = append(updates, upProfileUpdates...)
-	}
 
 	// Aether 3.x
 
